Tab key leaves the "Rename File" dialog, Shift-Tab doesn't return
Affected version
- Nightly flatpak: No
- Other: 44.2.1 (on Fedora 38)
Steps to reproduce
- Select a file or folder
- Press F2 or choose "Rename" from context menu
- Press Tab
Current behavior
Pressing Tab escapes the confines of the "Rename File" dialog, placing the keyboard focus on the "Back" button on the header bar. Pressing Shift-Tab does not return to the "Rename File" dialog, and pressing Tab repeatedly just cycles around the controls of the parent window that created the "Rename File" dialog. There is no way to get back to the "Rename File" dialog with the keyboard. The dialog can be dismissed by pressing Escape while the main window has focus, but cannot be returned to without the mouse. The up/down keys will navigate between the text field and button. "Down" will go from text field to button, "up" will go from button to text field.
Expected behavior
Pressing Tab in the "Rename File" dialog should keep the keyboard focus within the confines of the dialog. The dialog has only a text field, and a "Rename" button. So the Tab key should move between the text entry field and the "Rename" button, and back, in a closed loop (similar to how the up/down keys will go between the text field and button). The dialog should be dismissed by either pressing Escape (it is) or Enter (it is) or pressing Tab to highlight the "Rename" button, and then pressing Space or Enter.